--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-  
+  font-family: 'Koulen', cursive;
 font-family: 'Poppins', sans-serif;
-  
-  margin: 0;
+   margin: 0;
+   
  }
 h1 {
   
@@ -17,6 +17,7 @@ h1 {
   position: relative;
   margin-left: 40px;
   margin-right: 30px;
+  margin-bottom: 10%;
   text-align: center;
 
 }
@@ -34,3 +35,55 @@ h1 {
   cursor: pointer;
   font-weight: 700;
   }
+  .taka {
+    display: flex;
+   
+  }
+  .amount {
+ 
+    color: gray;
+  margin-right: 50px;
+  margin-left: 90px;
+  padding: 2px;
+    }
+   
+  .violet {
+  background-color:rgb(230, 148, 160);
+  border:2px solid rgb(238, 82, 82);
+  color:red;
+  }
+  .today {
+    color: black;
+    text-align: center;
+    font-weight: 700;
+    }
+    span {
+      background-color: skyblue;
+    }
+  p {
+    color: gray;
+    text-align: center;
+    font-weight: 700;
+  }
+ 
+  
+  
+  .text-center {
+  
+    background-color: red;
+      border: none;
+      color: white;
+      padding: 15px 32px;
+     
+      text-decoration: none;
+      
+      display: justify;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      border-radius: 7px;
+  }
+  
+  
+  
+
