--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ font-family: 'Poppins', sans-serif;
  }
 h1 {
   
-  font-size: 50px;
+  font-size: 40px;
+  text-align: center;
 }
 .banner-image {
   background-image: url(donate-images/donation6.jpg); 
@@ -26,7 +27,7 @@ h1 {
    padding-top: 5%;
   color: white;
 }
-.banner-text button{
+ .button{
   border: none;
   padding: 10px 25px;
   color: white;
@@ -34,6 +35,7 @@ h1 {
   border-radius: 5px;
   cursor: pointer;
   font-weight: 700;
+  
   }
   .taka {
     display: flex;
@@ -41,48 +43,72 @@ h1 {
   }
   .amount {
  
-    color: gray;
+  color: gray;
   margin-right: 50px;
   margin-left: 90px;
   padding: 2px;
     }
    
-  .violet {
+  .pink {
   background-color:rgb(230, 148, 160);
   border:2px solid rgb(238, 82, 82);
   color:red;
   }
   .today {
-    color: black;
-    text-align: center;
-    font-weight: 700;
+    
     }
-    span {
-      background-color: skyblue;
-    }
-  p {
+  
+  
+  .s-button{
+    border: none;
+  padding: 10px 25px;
+  color: white;
+  background-color: rgb(221, 52, 52);
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 700;
+  text-align: center;
+  position: fixed;
+
+  }
+  .paragraph {
     color: gray;
     text-align: center;
     font-weight: 700;
   }
- 
-  
-  
-  .text-center {
-  
-    background-color: red;
-      border: none;
-      color: white;
-      padding: 15px 32px;
-     
-      text-decoration: none;
-      
-      display: justify;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer;
-      border-radius: 7px;
+  .flexible-container {
+    display: flex;
   }
+  .half-width {
+    width: 40%;
+    margin-left:10%; margin-right: 5%;
+    padding: 2px;
+    box-shadow: inset;
+  } 
+  #color-one {
+    background-color: lightblue;
+  }
+  #color-two {
+    background-color: bisque;
+  }
+  #color-three {
+    background-color: antiquewhite;
+  }
+  .footer {
+    background-color: rgb(0, 0, 0);
+  }
+  .footer h2 {
+     text-align: center;
+    color: red;
+    
+   }
+   .footer p {
+    text-align: center;
+    color: gray;
+   }
+
+  
+  
   
   
   
